--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-parallax-tilt": "^1.7.179",
-    "react-waypoint": "^10.3.0"
+    "react-waypoint": "^10.3.0",
+    "sweetalert2": "^11.10.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
